force-app/main/default/objects/dw_ecard_app_ecard__x/fields/buspropulsion_id__c.field-meta.xml
<CustomField>
    <fullName>buspropulsion_id__c</fullName>
    <description>buspropulsion_id</description>
    <externalDeveloperName>buspropulsion_id</externalDeveloperName>
    <label>buspropulsion_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>