force-app/main/default/objects/dw_ecard_app_ecard__x/fields/busstatus_id__c.field-meta.xml
<CustomField>
    <fullName>busstatus_id__c</fullName>
    <description>busstatus_id</description>
    <externalDeveloperName>busstatus_id</externalDeveloperName>
    <label>busstatus_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>