force-app/main/default/objects/dw_ecard_app_ecard__x/fields/completed_date__c.field-meta.xml
<CustomField>
    <fullName>completed_date__c</fullName>
    <description>completed_date</description>
    <externalDeveloperName>completed_date</externalDeveloperName>
    <label>completed_date</label>
    <type>DateTime</type>
</CustomField>