force-app/main/default/objects/dw_ecard_app_ecard__x/fields/dw_ecard_app_customer_master__c.field-meta.xml
<CustomField>
    <fullName>dw_ecard_app_customer_master__c</fullName>
    <description>eCard Customer</description>
    <externalDeveloperName>customer_id</externalDeveloperName>
    <label>dw_ecard_app$customer_master</label>
    <length>18</length>
    <referenceTo>dw_ecard_app_customer_master__x</referenceTo>
    <relationshipLabel>ecard</relationshipLabel>
    <relationshipName>dw_ecard_app_ecard</relationshipName>
    <type>ExternalLookup</type>
</CustomField>