force-app/main/default/objects/dw_ecard_app_ecard__x/fields/end_date__c.field-meta.xml
<CustomField>
    <fullName>end_date__c</fullName>
    <description>end_date</description>
    <externalDeveloperName>end_date</externalDeveloperName>
    <label>end_date</label>
    <type>DateTime</type>
</CustomField>