force-app/main/default/objects/dw_ecard_app_ecard__x/fields/factory_id__c.field-meta.xml
<CustomField>
    <fullName>factory_id__c</fullName>
    <description>factory_id</description>
    <externalDeveloperName>factory_id</externalDeveloperName>
    <label>factory_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>