force-app/main/default/objects/dw_ecard_app_ecard__x/fields/start_date__c.field-meta.xml
<CustomField>
    <fullName>start_date__c</fullName>
    <description>start_date</description>
    <externalDeveloperName>start_date</externalDeveloperName>
    <label>start_date</label>
    <type>DateTime</type>
</CustomField>