force-app/main/default/objects/dw_ecard_app_ecard__x/fields/vin_image_url__c.field-meta.xml
<CustomField>
    <fullName>vin_image_url__c</fullName>
    <description>vin_image_url</description>
    <externalDeveloperName>vin_image_url</externalDeveloperName>
    <label>vin_image_url</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>