force-app/main/default/objects/dw_ecard_app_ecard__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>chassis_no__c</columns>
    <columns>start_date__c</columns>
    <columns>completed_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>